--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.1.0",
-    "prettier": "^2.7.1",
-    "i18next": "^21.8.10",
+    "i18next": "^21.8.11",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
-    "react-i18next": "^11.17.2",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.17.3",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.53.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
