--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.1.0",
-    "i18next": "^21.8.11",
+    "i18next": "^21.8.13",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
+    "node-sass": "^7.0.1",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
