--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-i18next": "^11.17.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recaptcha": "^1.2.1",
     "sass": "^1.53.0",
     "web-vitals": "^2.1.0"
   },
